--- a/sources/Applications/Cross-Platform/SharedUI/Views/XamarinForms/ItemsPage.xaml
+++ b/sources/Applications/Cross-Platform/SharedUI/Views/XamarinForms/ItemsPage.xaml
@@ -4,93 +4,117 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             xmlns:model="clr-namespace:TheSharpFactory.Apps.Cross.SharedUI.Models" 
+             xmlns:viewModels="clr-namespace:TheSharpFactory.Apps.Cross.SharedUI.ViewModels" 
              x:Class="TheSharpFactory.Apps.Cross.SharedUI.Views.XamarinForms.ItemsPage"
              Title="{Binding Title}"             
              x:Name="BrowseItemsPage">
 
-     <ContentPage.ToolbarItems>
-          <ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
-     </ContentPage.ToolbarItems>
+    <ContentPage.BindingContext>
+        <viewModels:ItemsViewModel />
+    </ContentPage.BindingContext>
 
-     <StackLayout Orientation="Vertical" VerticalOptions="StartAndExpand">
-          <ListView
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
+    </ContentPage.ToolbarItems>
+
+    <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+
+        <ListView
                x:Name="ItemsTableView"
-               BackgroundColor="Red"
                IsPullToRefreshEnabled="True"
                RefreshCommand="{Binding LoadItemsCommand}"
                ItemsSource="{Binding Items}"
                ItemSelected="ItemsTableView_ItemSelected">
-               <ListView.IsVisible>
-                    <OnPlatform x:TypeArguments="x:Boolean">
-                         <On Platform="WPF">true</On>
-                         <On Platform="UWP,Android,iOS">false</On>
-                    </OnPlatform>
-               </ListView.IsVisible>
-               <ListView.ItemTemplate>
-                    <DataTemplate>
-                         <ViewCell>
-                              <StackLayout Padding="10" Orientation="Vertical" VerticalOptions="Center">                                   
-                                   <Label
-                                        Text="{Binding Text}"
-                                        LineBreakMode="NoWrap" 
-                                        Style="{DynamicResource ListItemTextStyle}" 
-                                        FontSize="16" />
-                                   <Label
-                                        Text="{Binding Description}" 
-                                        LineBreakMode="NoWrap"
-                                        Style="{DynamicResource ListItemDetailTextStyle}"
-                                        FontSize="13" />
-                                   <StackLayout.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="2" Tapped="OnItemSelected"></TapGestureRecognizer>
-                                   </StackLayout.GestureRecognizers>
-                              </StackLayout>
-                         </ViewCell>
-                    </DataTemplate>
-               </ListView.ItemTemplate>
-          </ListView>
 
-          <RefreshView IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Command="{Binding LoadItemsCommand}">
-               <CollectionView
+            <ListView.IsVisible>
+                <OnPlatform x:TypeArguments="x:Boolean">
+                    <On Platform="WPF, macOS">true</On>
+                    <On Platform="UWP, Android, iOS">false</On>
+                </OnPlatform>
+            </ListView.IsVisible>
+
+            <d:ListView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>First Item</x:String>
+                    <x:String>Second Item</x:String>
+                    <x:String>Third Item</x:String>
+                </x:Array>
+            </d:ListView.ItemsSource>
+
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout Padding="10" Orientation="Vertical" VerticalOptions="Start">
+                            
+                            <Label
+                                Text="{Binding Text}"
+                                d:Text="{Binding .}"
+                                LineBreakMode="NoWrap"
+                                Style="{DynamicResource ListItemTextStyle}"
+                                FontSize="16" />
+                            <Label
+                                Text="{Binding Description}" 
+                                LineBreakMode="NoWrap"
+                                Style="{DynamicResource ListItemDetailTextStyle}"
+                                FontSize="13" />
+                            <StackLayout.GestureRecognizers>
+                                <TapGestureRecognizer NumberOfTapsRequired="2" Tapped="OnItemSelected"></TapGestureRecognizer>
+                            </StackLayout.GestureRecognizers>
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <RefreshView
+            IsRefreshing="{Binding IsBusy, Mode=TwoWay}"
+            Command="{Binding LoadItemsCommand}">
+
+            <RefreshView.IsVisible>
+                <OnPlatform x:TypeArguments="x:Boolean">
+                    <On Platform="WPF, macOS">false</On>
+                    <On Platform="UWP, Android, iOS">true</On>
+                </OnPlatform>
+
+            </RefreshView.IsVisible>
+            <StackLayout>
+                <Label Text="CollectionView" />
+                <CollectionView
                     x:Name="ItemsCollectionView"
                     ItemsSource="{Binding Items}">
-                    
-                    <CollectionView.IsVisible>
-                         <OnPlatform x:TypeArguments="x:Boolean">
-                              <On Platform="WPF">true</On>
-                              <On Platform="UWP,Android,iOS">True</On>
-                         </OnPlatform>
-                    </CollectionView.IsVisible>
-                    
+
                     <d:CollectionView.ItemsSource>
-                         <x:Array Type="{x:Type x:String}">
-                              <x:String>First Item</x:String>
-                              <x:String>Second Item</x:String>
-                              <x:String>Third Item</x:String>
-                         </x:Array>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>First Item</x:String>
+                            <x:String>Second Item</x:String>
+                            <x:String>Third Item</x:String>
+                        </x:Array>
                     </d:CollectionView.ItemsSource>
                     <CollectionView.ItemTemplate>
-                         <DataTemplate>
-                              <StackLayout Padding="10">
-                                   <Label
+                        <DataTemplate>
+                            <StackLayout Padding="10">
+                                <Label
                                         Text="{Binding Text}" 
                                         d:Text="{Binding .}"
                                         LineBreakMode="NoWrap" 
                                         Style="{DynamicResource ListItemTextStyle}" 
                                         FontSize="16" />
-                                   <Label
+                                <Label
                                         Text="{Binding Description}" 
                                         d:Text="Item descripton"
                                         LineBreakMode="NoWrap"
                                         Style="{DynamicResource ListItemDetailTextStyle}"
                                         FontSize="13" />
-                                   <StackLayout.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
-                                   </StackLayout.GestureRecognizers>
-                              </StackLayout>
-                         </DataTemplate>
+                                <StackLayout.GestureRecognizers>
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
+                                </StackLayout.GestureRecognizers>
+                            </StackLayout>
+                        </DataTemplate>
                     </CollectionView.ItemTemplate>
-               </CollectionView>
-          </RefreshView>
-     </StackLayout>
+                </CollectionView>
+
+            </StackLayout>
+        </RefreshView>
+    </StackLayout>
+
 </ContentPage>
