--- a/sources/Applications/Cross-Platform/SharedUI/XFApp.xaml
+++ b/sources/Applications/Cross-Platform/SharedUI/XFApp.xaml
@@ -1,20 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="TheSharpFactory.Apps.Cross.SharedUI.XFApp">
+<Application
+	x:Class="TheSharpFactory.Apps.Cross.SharedUI.XFApp"
+	xmlns="http://xamarin.com/schemas/2014/forms"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	mc:Ignorable="d">
 
-    <Application.Resources>
-        <ResourceDictionary>
-            <!--Global Styles-->
-            <Color x:Key="NavigationPrimary">#2196F3</Color>
-            <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
-                <Setter Property="BarTextColor" Value="White" />
-            </Style>
-        </ResourceDictionary>
-    </Application.Resources>
-    
+	<Application.Resources>
+		<ResourceDictionary>
+			<!--  Global Styles  -->
+			<OnPlatform x:Key="NavigationPrimary" x:TypeArguments="Color">
+				<On Platform="Android, iOS, UWP, WPF">#2196F3</On>
+				<On Platform="macOS">Blue</On>
+			</OnPlatform>
+			<Style TargetType="NavigationPage">
+				<Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
+				<Setter Property="BarTextColor" Value="White" />
+			</Style>
+		</ResourceDictionary>
+	</Application.Resources>
+
 </Application>
