--- a/sources/Applications/Web/BlazorClient/Pages/Counter.razor
+++ b/sources/Applications/Web/BlazorClient/Pages/Counter.razor
@@ -1,17 +1,40 @@
 ﻿@page "/counter"
 @namespace TheSharpFactory.Apps.Web.BlazorClient.Pages
 
+@inject TheSharpFactorty.Apps.Shared.Services.ICounterService counter
+
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<table>
+     <tbody>
+          <tr style="vertical-align:middle;text-align:center">
+               <td colspan="3"><input type="number" @bind-value="counter.Count" @bind-value:event="oninput" /></td>
+          </tr>
+          <tr style="vertical-align:middle;text-align:center">
+               <td>
+                    <input type="number" @bind-value="_decrementCount" style="width:2em" />
+                    <button class="btn btn-primary" @onclick="DecrementCount" disabled="@(!counter.CanDecrement)">-</button>
+               </td>
+               <td><input type="range" min="0" max="100" @bind-value="counter.Count" /></td>
+               <td>
+                    <button class="btn btn-primary" @onclick="IncrementCount" disabled="@(!counter.CanIncrement)">+</button>
+                    <input type="number" @bind-value="_incrementCount" style="width:2em" />
+               </td>
+          </tr>
+     </tbody>
+</table>
 
 @code {
-     private int currentCount = 0;
+     private int _decrementCount = 1;
+     private int _incrementCount = 1;
+
+
+
+     private void DecrementCount()
+          => counter.Decrement(_decrementCount);
 
      private void IncrementCount()
      {
-          currentCount++;
+          counter.Increment(_incrementCount);
      }
 }
