--- a/sources/Applications/Web/BlazorClient/Pages/FetchData.razor
+++ b/sources/Applications/Web/BlazorClient/Pages/FetchData.razor
@@ -1,13 +1,14 @@
 ﻿@page "/fetchdata"
-@namespace TheSharpFactory.Apps.Web.BlazorClient.Pages
+@namespace TheSharpFactory.Apps.Shared.ViewModels.Conventional
+@implements IDisposable
 
-@inject WeatherForecastService ForecastService
+@inject IFetchDataViewModel vm
 
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
 
-@if (forecasts == null)
+@if (vm.Forecasts == null)
 {
      <p><em>Loading...</em></p>
 }
@@ -23,7 +24,7 @@ else
                </tr>
           </thead>
           <tbody>
-               @foreach (var forecast in forecasts)
+               @foreach (var forecast in vm.Forecasts)
                {
                     <tr>
                          <td>@forecast.Date.ToShortDateString()</td>
@@ -37,10 +38,11 @@ else
 }
 
 @code {
-     private WeatherForecast[] forecasts;
+     private ICollection<IWeatherForecastDTO> forecasts;
 
      protected override async Task OnInitializedAsync()
-     {
-          forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-     }
+          => await vm.GetForecastAsync(DateTime.Now);
+
+     public void Dispose()
+          => vm.Dispose();
 }
