Fixed web ui for correct functionalities Fixed a couple of other things

--- a/sources/Applications/Cross-Platform/Hybrid/Desktop.ElectronWeb/_Imports.razor
+++ b/sources/Applications/Cross-Platform/Hybrid/Desktop.ElectronWeb/_Imports.razor
@@ -9,5 +9,8 @@
 
 @*Need to reference components*@
 @using TheSharpFactory.Apps.Cross.Desktop.ElectronWeb
-@using TheSharpFactory.Apps.Web.SharedUI.Data
+
+@*need to reference shared projects*@
 @using TheSharpFactory.Apps.Web.SharedUI.Layout
+@using TheSharpFactory.Apps.Shared.Services
+@using TheSharpFactory.Apps.Shared.ViewModels
