--- a/sources/Applications/Web/BlazorClient/Pages/Counter.razor
+++ b/sources/Applications/Web/BlazorClient/Pages/Counter.razor
@@ -1,7 +1,7 @@
 ﻿@page "/counter"
 @namespace TheSharpFactory.Apps.Web.BlazorClient.Pages
 
-@inject TheSharpFactorty.Apps.Shared.Services.ICounterService counter
+@inject ICounterService counter
 
 <h1>Counter</h1>
 
