--- a/sources/Applications/Web/BlazorServer/_Imports.razor
+++ b/sources/Applications/Web/BlazorServer/_Imports.razor
@@ -8,5 +8,7 @@
 
 @using TheSharpFactory.Apps.Web.BlazorClient.Pages
 
-@using TheSharpFactory.Apps.Web.SharedUI.Data
+@*need to reference shared projects*@
 @using TheSharpFactory.Apps.Web.SharedUI.Layout
+@using TheSharpFactory.Apps.Shared.Services
+@using TheSharpFactory.Apps.Shared.ViewModels
