Refactored Hybrid apps

--- a/sources/Applications/Hybrid/Desktop.ElectronWeb/_Imports.razor
+++ b/sources/Applications/Hybrid/Desktop.ElectronWeb/_Imports.razor
@@ -8,7 +8,7 @@
 @using Microsoft.JSInterop
 
 @*Need to reference components*@
-@using TheSharpFactory.Apps.Cross.Desktop.ElectronWeb
+@using TheSharpFactory.Apps.Hybrid.Desktop.ElectronWeb
 
 @*need to reference shared projects*@
 @using TheSharpFactory.Apps.Web.SharedUI.Layout
