--- a/sources/Applications/Hybrid/Desktop.WebWindow/_Imports.razor
+++ b/sources/Applications/Hybrid/Desktop.WebWindow/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 
-@using TheSharpFactory.Apps.Cross.Desktop.WebView
+@using TheSharpFactory.Apps.Hybrid.Desktop.WebView
 
 @using TheSharpFactory.Apps.Web.SharedUI.Layout
