--- a/sources/Applications/Web/SharedUI/Views/Shared/NavMenu.cshtml
+++ b/sources/Applications/Web/SharedUI/Views/Shared/NavMenu.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.JSInterop
-@using TheSharpFactory.Apps.Web.SharedUI
+﻿@using TheSharpFactory.Apps.Web.SharedUI
 
 @inject MvcApplicationModel appModel
 
@@ -21,7 +20,7 @@
 <div class="@ViewBag.NavMenuCssClass" onclick="ToggleNavMenu">
      <ul class="nav flex-column">
           <li class="nav-item px-3">
-               <a class="nav-link" href="" Match="NavLinkMatch.All">
+               <a class="nav-link" asp-area="Landing" asp-controller="Home" asp-action="Index" Match="NavLinkMatch.All">
                     <span class="oi oi-home" aria-hidden="true"></span> Home
                </a>
           </li>
@@ -33,6 +32,11 @@
           <li class="nav-item px-3">
                <a class="nav-link" asp-area="Landing" asp-controller="Home" asp-action="FetchData">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+               </a>
+          </li>
+          <li class="nav-item px-3">
+               <a class="nav-link" asp-area="Sales" asp-controller="Customers" asp-action="Index">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
                </a>
           </li>
      </ul>
