--- a/sources/Applications/Web/SharedUI/Views/Shared/_Layout.cshtml
+++ b/sources/Applications/Web/SharedUI/Views/Shared/_Layout.cshtml
@@ -5,8 +5,16 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
      <title>@ViewData["Title"] - MVC @ViewBag.Brand</title>
      <base href="/" />
-     <link href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
-     <link href="~/styles/app.css" rel="stylesheet" />
+     @*<link href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
+     <link rel="stylesheet"
+           href="~/styles/app.css" />
+     <link rel="stylesheet"
+           href="_content/TheSharpFactory.Apps.Shared.StaticAssets/libraries/bootstrap/styles/bootstrap.min.css" />*@
+
+     <link rel="stylesheet"
+           href="_content/TheSharpFactory.Apps.Shared.StaticAssets/libraries/bootstrap/styles/bootstrap.min.css" />
+     <link rel="stylesheet"
+           href="_content/TheSharpFactory.Apps.Shared.StaticAssets/styles/app.css" />
 </head>
 <body>
 
