--- a/sources/Applications/Web/SharedUI.Blazor/Layout/NavMenu.razor
+++ b/sources/Applications/Web/SharedUI.Blazor/Layout/NavMenu.razor
@@ -37,7 +37,7 @@
      private bool collapseNavMenu = true;
 
      private string NavMenuCssClass
-          => collapseNavMenu ? "collapse" : null;
+          => collapseNavMenu ? "collapse" : "";
 
      string brand = string.Empty;
 
