--- a/sources/Applications/Web/SharedUI.Blazor/Layout/SurveyPrompt.razor
+++ b/sources/Applications/Web/SharedUI.Blazor/Layout/SurveyPrompt.razor
@@ -14,5 +14,5 @@
 @code {
      // Demonstrates how a parent component can supply parameters
      [Parameter]
-     public string Title { get; set; }
+     public string Title { get; set; } = "";
 }
