Updated Xamarin projects: * Bumped up Xamarin version * Updated Manifest    * Updated target Android version to 10 (Q)    * Updated package names and label * Used NDK to compile reference assemblies to native code *Used AOT compilation for release mode

--- a/sources/Applications/Cross-Platform/SharedUI/XFApp.xaml
+++ b/sources/Applications/Cross-Platform/SharedUI/XFApp.xaml
@@ -11,7 +11,7 @@
 		<ResourceDictionary>
 			<!--  Global Styles  -->
 			<OnPlatform x:Key="NavigationPrimary" x:TypeArguments="Color">
-				<On Platform="Android, iOS, UWP, WPF">#2196F3</On>
+				<On Platform="Android, iOS, UWP, WPF, Tizen">#2196F3</On>
 				<On Platform="macOS">Blue</On>
 			</OnPlatform>
 			<Style TargetType="NavigationPage">
