--- a/sources/Applications/Cross-Platform/SharedUI/Views/XamarinForms/ItemsPage.xaml
+++ b/sources/Applications/Cross-Platform/SharedUI/Views/XamarinForms/ItemsPage.xaml
@@ -1,120 +1,115 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             xmlns:viewModels="clr-namespace:TheSharpFactory.Apps.Cross.SharedUI.ViewModels" 
-             x:Class="TheSharpFactory.Apps.Cross.SharedUI.Views.XamarinForms.ItemsPage"
-             Title="{Binding Title}"             
-             x:Name="BrowseItemsPage">
+<ContentPage
+	x:Class="TheSharpFactory.Apps.Cross.SharedUI.Views.XamarinForms.ItemsPage"
+	xmlns="http://xamarin.com/schemas/2014/forms"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:viewModels="clr-namespace:TheSharpFactory.Apps.Cross.SharedUI.ViewModels"
+	x:Name="BrowseItemsPage"
+	Title="{Binding Title}"
+	mc:Ignorable="d">
 
-    <ContentPage.BindingContext>
-        <viewModels:ItemsViewModel />
-    </ContentPage.BindingContext>
+	<ContentPage.BindingContext>
+		<viewModels:ItemsViewModel />
+	</ContentPage.BindingContext>
 
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
-    </ContentPage.ToolbarItems>
+	<ContentPage.ToolbarItems>
+		<ToolbarItem Clicked="AddItem_Clicked" Text="Add" />
+	</ContentPage.ToolbarItems>
 
-    <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+	<StackLayout Orientation="Horizontal">
 
-        <ListView
-               x:Name="ItemsTableView"
-               IsPullToRefreshEnabled="True"
-               RefreshCommand="{Binding LoadItemsCommand}"
-               ItemsSource="{Binding Items}"
-               ItemSelected="ItemsTableView_ItemSelected">
+		<ListView
+			x:Name="ItemsTableView"
+			IsPullToRefreshEnabled="True"
+			IsVisible="{x:OnPlatform Default=False,
+			                         WPF=True,
+			                         macOS=True}"
+			ItemSelected="ItemsTableView_ItemSelected"
+			ItemsSource="{Binding Items}"
+			RefreshCommand="{Binding LoadItemsCommand}">
 
-            <ListView.IsVisible>
-                <OnPlatform x:TypeArguments="x:Boolean">
-                    <On Platform="WPF, macOS">true</On>
-                    <On Platform="UWP, Android, iOS">false</On>
-                </OnPlatform>
-            </ListView.IsVisible>
+			<d:ListView.ItemsSource>
+				<x:Array Type="{x:Type x:String}">
+					<x:String>First Item</x:String>
+					<x:String>Second Item</x:String>
+					<x:String>Third Item</x:String>
+				</x:Array>
+			</d:ListView.ItemsSource>
 
-            <d:ListView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>First Item</x:String>
-                    <x:String>Second Item</x:String>
-                    <x:String>Third Item</x:String>
-                </x:Array>
-            </d:ListView.ItemsSource>
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<ViewCell>
+						<StackLayout
+							Padding="10"
+							Orientation="Vertical"
+							VerticalOptions="Start">
 
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout Padding="10" Orientation="Vertical" VerticalOptions="Start">
-                            
-                            <Label
-                                Text="{Binding Text}"
-                                d:Text="{Binding .}"
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListItemTextStyle}"
-                                FontSize="16" />
-                            <Label
-                                Text="{Binding Description}" 
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListItemDetailTextStyle}"
-                                FontSize="13" />
-                            <StackLayout.GestureRecognizers>
-                                <TapGestureRecognizer NumberOfTapsRequired="2" Tapped="OnItemSelected"></TapGestureRecognizer>
-                            </StackLayout.GestureRecognizers>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+							<Label
+								d:Text="{Binding .}"
+								FontSize="16"
+								LineBreakMode="NoWrap"
+								Style="{DynamicResource ListItemTextStyle}"
+								Text="{Binding Text}" />
+							<Label
+								FontSize="13"
+								LineBreakMode="NoWrap"
+								Style="{DynamicResource ListItemDetailTextStyle}"
+								Text="{Binding Description}" />
+						</StackLayout>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
 
-        <RefreshView
-            IsRefreshing="{Binding IsBusy, Mode=TwoWay}"
-            Command="{Binding LoadItemsCommand}">
+		<RefreshView
+			Command="{Binding LoadItemsCommand}"
+			IsRefreshing="{Binding IsBusy, Mode=TwoWay}"
+			IsVisible="{x:OnPlatform Default=True,
+			                         WPF=False,
+			                         macOS=False}">
 
-            <RefreshView.IsVisible>
-                <OnPlatform x:TypeArguments="x:Boolean">
-                    <On Platform="WPF, macOS">false</On>
-                    <On Platform="UWP, Android, iOS">true</On>
-                </OnPlatform>
+			<StackLayout Orientation="Vertical">
+				<Label Text="CollectionView" VerticalOptions="Start" />
+				<CollectionView
+					x:Name="ItemsCollectionView"
+					ItemsSource="{Binding Items}"
+					SelectionChanged="ItemsCollectionView_SelectionChanged"
+					SelectionMode="Single">
 
-            </RefreshView.IsVisible>
-            <StackLayout>
-                <Label Text="CollectionView" />
-                <CollectionView
-                    x:Name="ItemsCollectionView"
-                    ItemsSource="{Binding Items}">
+					<d:CollectionView.ItemsSource>
+						<x:Array Type="{x:Type x:String}">
+							<x:String>First Item</x:String>
+							<x:String>Second Item</x:String>
+							<x:String>Third Item</x:String>
+						</x:Array>
+					</d:CollectionView.ItemsSource>
+					<CollectionView.ItemTemplate>
+						<DataTemplate>
+							<StackLayout Padding="10" BackgroundColor="Black">
+								<Label
+									d:Text="{Binding .}"
+									FontSize="16"
+									LineBreakMode="NoWrap"
+									Style="{DynamicResource ListItemTextStyle}"
+									Text="{Binding Text}" />
+								<Label
+									d:Text="Item descripton"
+									FontSize="13"
+									LineBreakMode="NoWrap"
+									Style="{DynamicResource ListItemDetailTextStyle}"
+									Text="{Binding Description}" />
+								<!--<StackLayout.GestureRecognizers>
+									<TapGestureRecognizer NumberOfTapsRequired="2" Tapped="OnItemSelected" />
+								</StackLayout.GestureRecognizers>-->
+							</StackLayout>
+						</DataTemplate>
+					</CollectionView.ItemTemplate>
+				</CollectionView>
 
-                    <d:CollectionView.ItemsSource>
-                        <x:Array Type="{x:Type x:String}">
-                            <x:String>First Item</x:String>
-                            <x:String>Second Item</x:String>
-                            <x:String>Third Item</x:String>
-                        </x:Array>
-                    </d:CollectionView.ItemsSource>
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout Padding="10">
-                                <Label
-                                        Text="{Binding Text}" 
-                                        d:Text="{Binding .}"
-                                        LineBreakMode="NoWrap" 
-                                        Style="{DynamicResource ListItemTextStyle}" 
-                                        FontSize="16" />
-                                <Label
-                                        Text="{Binding Description}" 
-                                        d:Text="Item descripton"
-                                        LineBreakMode="NoWrap"
-                                        Style="{DynamicResource ListItemDetailTextStyle}"
-                                        FontSize="13" />
-                                <StackLayout.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="OnItemSelected"></TapGestureRecognizer>
-                                </StackLayout.GestureRecognizers>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-
-            </StackLayout>
-        </RefreshView>
-    </StackLayout>
+			</StackLayout>
+		</RefreshView>
+	</StackLayout>
 
 </ContentPage>
