--- a/sources/Applications/Cross-Platform/SharedUI/Views/XamarinForms/NewItemPage.xaml
+++ b/sources/Applications/Cross-Platform/SharedUI/Views/XamarinForms/NewItemPage.xaml
@@ -1,44 +1,64 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="TheSharpFactory.Apps.Cross.SharedUI.Views.XamarinForms.NewItemPage"
-             Title="New Item">
+﻿<?xml version="1.0" encoding="UTF-8" ?>
+<ContentPage
+	x:Class="TheSharpFactory.Apps.Cross.SharedUI.Views.XamarinForms.NewItemPage"
+	xmlns="http://xamarin.com/schemas/2014/forms"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	Title="New Item"
+	mc:Ignorable="d">
 
-     <ContentPage.ToolbarItems>
-          <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
-          <ToolbarItem Text="Save" Clicked="Save_Clicked" />
-     </ContentPage.ToolbarItems>
+	<ContentPage.ToolbarItems>
+		<ToolbarItem Clicked="Cancel_Clicked" Text="Cancel" />
+		<ToolbarItem Clicked="Save_Clicked" Text="Save" />
+	</ContentPage.ToolbarItems>
 
-     <ContentPage.Content>
-          <StackLayout Spacing="20" Padding="15">
-               <StackLayout Orientation="Horizontal" HorizontalOptions="Fill">
-                    <Label Text="Text" FontSize="Medium" VerticalOptions="Start" />
-                    <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" VerticalOptions="Fill" />
-               </StackLayout>
-               <StackLayout Orientation="Horizontal" HorizontalOptions="Fill">
-                    <Label Text="Description" FontSize="Medium" />
-                    <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
-               </StackLayout>
-               <Button Text="Save" Clicked="Save_Clicked">
-                    <Button.IsVisible>
-                         <OnPlatform x:TypeArguments="x:Boolean">
-                              <On Platform="WPF">true</On>
-                              <On Platform="UWP,Android,iOS">false</On>
-                         </OnPlatform>
-                    </Button.IsVisible>
-               </Button>
-               <Button Text="Cancel" Clicked="Cancel_Clicked">
-                    <Button.IsVisible>
-                         <OnPlatform x:TypeArguments="x:Boolean">
-                              <On Platform="WPF">true</On>
-                              <On Platform="UWP,Android,iOS">false</On>
-                         </OnPlatform>
-                    </Button.IsVisible>
-               </Button>
-          </StackLayout>
-     </ContentPage.Content>
+	<ContentPage.Content>
+		<StackLayout Padding="15" Spacing="20">
+			<Grid ColumnDefinitions="2,*" RowDefinitions="2,*">
+				<Label
+					Grid.Row="1"
+					Grid.Column="1"
+					FontSize="Medium"
+					Text="Text" />
+				<Entry
+					Grid.Row="1"
+					Grid.Column="2"
+					d:Text="Item name"
+					FontSize="Small"
+					Text="{Binding Item.Text}" />
+				<Label
+					Grid.Row="2"
+					Grid.Column="1"
+					FontSize="Medium"
+					Text="Description" />
+				<Editor
+					Grid.Row="2"
+					Grid.Column="2"
+					Margin="0"
+					d:Text="Item description"
+					FontSize="Small"
+					Text="{Binding Item.Description}" />
+			</Grid>
+			<StackLayout HorizontalOptions="Fill" Orientation="Horizontal" />
+			<StackLayout HorizontalOptions="Fill" Orientation="Horizontal" />
+			<Button Clicked="Save_Clicked" Text="Save">
+				<Button.IsVisible>
+					<OnPlatform x:TypeArguments="x:Boolean">
+						<On Platform="WPF,macOS,Tizen">true</On>
+						<On Platform="UWP,Android,iOS">false</On>
+					</OnPlatform>
+				</Button.IsVisible>
+			</Button>
+			<Button Clicked="Cancel_Clicked" Text="Cancel">
+				<Button.IsVisible>
+					<OnPlatform x:TypeArguments="x:Boolean">
+						<On Platform="WPF,macOS,Tizen">true</On>
+						<On Platform="UWP,Android,iOS">false</On>
+					</OnPlatform>
+				</Button.IsVisible>
+			</Button>
+		</StackLayout>
+	</ContentPage.Content>
 
 </ContentPage>
