--- a/sources/Applications/Cross-Platform/Windows/WPF/MainWindow.xaml
+++ b/sources/Applications/Cross-Platform/Windows/WPF/MainWindow.xaml
@@ -1,14 +1,14 @@
 ﻿<wpf:FormsApplicationPage
-        x:Class="TheSharpFactory.Apps.Cross.WPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TheSharpFactory.Apps.Cross.WPF"
-        xmlns:wpf="clr-namespace:Xamarin.Forms.Platform.WPF;assembly=Xamarin.Forms.Platform.WPF"
-        mc:Ignorable="d"
-        Title="TheSharpfactory Sample" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+	x:Class="TheSharpFactory.Apps.Cross.WPF.MainWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:TheSharpFactory.Apps.Cross.WPF"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:wpf="clr-namespace:Xamarin.Forms.Platform.WPF;assembly=Xamarin.Forms.Platform.WPF"
+	Title="TheSharpFactory Sample"
+	Width="800"
+	Height="450"
+	mc:Ignorable="d">
+	<Grid />
 </wpf:FormsApplicationPage>
